--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
-<html lang="eng">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatable" content="IE=edge">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    SIDE
-</body>
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-compatible" content="IE=edge">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="assets/css/main.css"/>
+    </head>
+
+    <body>
+        <header>
+        <div>
+            <h1>Varney Vincent</h1>
+        </div>   
+        <nav> 
+            <ul>
+                <li><a href="about me">About Me</a></li>
+                <li><a href="work">Work</a></li>
+                <li><a href="contact-me">Contact Me</a></li>
+                <li><a href="resume">Resume</a></li>
+            </ul>  
+         </nav>
+        </header> 
+
+
+
+    </body>
+
+
+
+
+
+
 </html>
