Added hero section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
          </nav>
         </header> 
 
+        <section class="hero"> 
+            <div>
+                <h2>Cool Subtitle Here!</h2>
+            </div>
+        </section>
 
 
     </body>
