Added About Me section to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@
             </div>
         </section>
 
+        <main class="container">
+            <section class="page-section">
+                <h2>About Me</h2>
+            </section>
+
+            <section
+                <p>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                </p>
+            <br />
+                <P>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                </P>
+            <br/>
+
+                <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                </p>
+            </section>
+
 
     </body>
 
