--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <main class="container">
-            <section class="page-section">
+            <section class="about-me">
                 <h2>About Me</h2>
             </section>
 
