Added background image to hero section; styled header section

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
     <body>
         <header>
-        <div>
-            <h1>Varney Vincent</h1>
-        </div>   
+            <h1><a href="index.html"Varney Vincent></a></h1>  
         <nav> 
-            <ul>
+            <ul class="topNav">
                 <li><a href="about me">About Me</a></li>
                 <li><a href="work">Work</a></li>
-                <li><a href="contact-me">Contact Me</a></li>
+                <li><a href="contact">Contact Me</a></li>
                 <li><a href="resume">Resume</a></li>
             </ul>  
          </nav>
@@ -30,31 +28,34 @@
         </section>
 
         <main class="container">
-            <section class="about-me">
+            <section class="page-section" id="about">
                 <h2>About Me</h2>
             </section>
-
-            <section
+            <section>
                 <p>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. <br>
                 </p>
-            <br />
-                <P>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                </P>
-            <br/>
+                <br />
+                <p>
+                    Add text here. Add text here. Add text here. <br>
+                    Add text here. Add text here. Add text here. <br>
+                 </p>
+                 <br />
+                 <p>
+                    Add text here. Add text here. Add text here. <br>
+                    Add text here. Add text here. Add text here. <br>
+                 </p>
+            </section>
+            
+            <section class="work">
+                <div>
+                <h2>Work</h2>
+                <div>
+            </section>
 
-                <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
-                </p>
+            <section class="contact-me">
+                <h2>Contact Me</h2>
             </section>
 
 
