--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1><a href="index.html"Varney Vincent></a></h1>  
+            <h1><a href="index.html">Varney Vincent</a></h1>  
         <nav> 
             <ul class="topNav">
                 <li><a href="about me">About Me</a></li>
@@ -47,12 +47,20 @@
                     Add text here. Add text here. Add text here. <br>
                  </p>
             </section>
-            
-            <section class="work">
-                <div>
+            <section class="page-section" id="work">
                 <h2>Work</h2>
-                <div>
             </section>
+            <section id="portfolio">
+                <figure class="page1">
+                    <a href="#">
+                        <img src="./assets/images/surf.webp" alt="surf" 
+                        width="550"
+                        height="450"/>
+                    </a>
+                </figure>
+
+            </section>
+
 
             <section class="contact-me">
                 <h2>Contact Me</h2>
