Add grids to portfolio section

--- a/index.html
+++ b/index.html
@@ -51,12 +51,49 @@
                 <h2>Work</h2>
             </section>
             <section id="portfolio">
-                <figure class="page1">
+                <figure class="fig0">
                     <a href="#">
                         <img src="./assets/images/surf.webp" alt="surf" 
-                        width="550"
-                        height="450"/>
+                        width= "600"
+                        height="400"/>
+                    <figcaption>
+                        <h3>Surf Report</h3>
+                        <p> MERN Stack</p>
                     </a>
+                    </figcaption>
+                </figure>
+                <figure class="fig1">
+                    <a href="#"><img src="./assets/images/led-wall.png" alt="led-wall" width= "500"height="200"/>
+                    <figcaption>
+                        <h3>Led Wall</h3>
+                        <p>Node/IoT</p>
+                    </a>
+                    </figcaption>
+                </figure>
+                <figure class="fig2">
+                    <a href="#"><img src="./assets/images/calculator.jpeg" alt="calculator" width= "500" height="200"/>
+                    <figcaption>
+                        <h3>Calculator</h3>
+                        <p>React/JavaScript/CSS</p>
+                    </a>
+                    </figcaption>
+                </figure>
+                <figure class="fig3">
+                    <a href="#"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width= "500" height="200"/>
+                    <figcaption>
+                        <h3>Pastel Puzzels</h3>
+                        <p> MERN Stack</p>
+                    </a>
+                    </figcaption>
+                </figure>
+                <figure class="fig4">
+                    <a href="#">
+                        <img src="./assets/images/run-buddy.png" alt="run-buddy" width= "500" height="200"/>
+                    <figcaption>
+                        <h3>Run Buddy</h3>
+                        <p>HTML/CSS</p>
+                    </a>
+                    </figcaption>
                 </figure>
 
             </section>
