Added contact info to 'Contact Me' section

--- a/index.html
+++ b/index.html
@@ -95,16 +95,29 @@
                     </a>
                     </figcaption>
                 </figure>
-
             </section>
 
 
-            <section class="contact-me">
+            <section class="page-section" id="contact">
                 <h2>Contact Me</h2>
             </section>
-
-
+            <section>
+                <ul class="bottomNav">
+                    <li><a href="5555555555">555.555.5555</a>
+                    </li>
+                    <li><a href="mailto:myportfolio@gmail.com">Email</a>
+                    </li>
+                    <li><a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </li>
+                    <li><a href="http://twitter.com" target="_blank"  rel="noopener noreferrer">Twitter</a>
+                    </li>
+                    <li><a href="#" target="_blank"  rel="noopener noreferrer">Spotify</a>
+                    </li>
+                </u>
+            </section>
+        </main>
     </body>
+</html>
 
 
 
