--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1><a href="index.html">Varney Vincent</a></h1>  
+            <h1><a href="index.html">My Portfolio</a></h1>  
         <nav> 
             <ul class="topNav">
                 <li><a href="about me">About Me</a></li>
@@ -55,7 +55,7 @@
                     <a href="#">
                         <img src="./assets/images/surf.webp" alt="surf" 
                         width= "600"
-                        height="400"/>
+                        height="455"/>
                     <figcaption>
                         <h3>Surf Report</h3>
                         <p> MERN Stack</p>
