Added comments to CSS file

--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
             </section>
             <section>
                 <p>
-                   Add text here. Add text here. Add text here. <br>
-                   Add text here. Add text here. Add text here. <br>
+                   Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
                 </p>
                 <br />
                 <p>
-                    Add text here. Add text here. Add text here. <br>
-                    Add text here. Add text here. Add text here. <br>
+                    Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
                  </p>
                  <br />
                  <p>
-                    Add text here. Add text here. Add text here. <br>
-                    Add text here. Add text here. Add text here. <br>
+                    Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
                  </p>
             </section>
             <section class="page-section" id="work">
@@ -54,8 +51,8 @@
                 <figure class="fig0">
                     <a href="#">
                         <img src="./assets/images/surf.webp" alt="surf" 
-                        width= "600"
-                        height="455"/>
+                        width= "500"
+                        height="563"/>
                     <figcaption>
                         <h3>Surf Report</h3>
                         <p> MERN Stack</p>
@@ -63,7 +60,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig1">
-                    <a href="#"><img src="./assets/images/led-wall.png" alt="led-wall" width= "500"height="200"/>
+                    <a href="#"><img src="./assets/images/led-wall.png" alt="led-wall" width="500" height="253"/>
                     <figcaption>
                         <h3>Led Wall</h3>
                         <p>Node/IoT</p>
@@ -71,7 +68,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig2">
-                    <a href="#"><img src="./assets/images/calculator.jpeg" alt="calculator" width= "500" height="200"/>
+                    <a href="#"><img src="./assets/images/calculator.jpeg" alt="calculator" width= "500" height="252"/>
                     <figcaption>
                         <h3>Calculator</h3>
                         <p>React/JavaScript/CSS</p>
@@ -79,7 +76,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig3">
-                    <a href="#"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width= "500" height="200"/>
+                    <a href="#"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width="500" height="253"/>
                     <figcaption>
                         <h3>Pastel Puzzels</h3>
                         <p> MERN Stack</p>
@@ -88,13 +85,14 @@
                 </figure>
                 <figure class="fig4">
                     <a href="#">
-                        <img src="./assets/images/run-buddy.png" alt="run-buddy" width= "500" height="200"/>
+                        <img src="./assets/images/run-buddy.png" alt="run-buddy" width= "500" height="253"/>
                     <figcaption>
                         <h3>Run Buddy</h3>
                         <p>HTML/CSS</p>
                     </a>
                     </figcaption>
                 </figure>
+            </div>
             </section>
 
 
