--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="assets/css/main.css"/>
     </head>
-
     <body>
         <header>
             <h1><a href="index.html">My Portfolio</a></h1>  
@@ -20,18 +19,19 @@
             </ul>  
          </nav>
         </header> 
-
         <section class="hero"> 
             <div>
                 <h2>Cool Subtitle Here!</h2>
             </div>
         </section>
-
         <main class="container">
             <section class="page-section" id="about">
                 <h2>About Me</h2>
             </section>
             <section>
+                <div>
+                    <img src="./assets/images/59624.jpg" alt="Avatar" class="avatar">
+                </div>
                 <p>
                    Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. <br>
                 </p>
@@ -92,10 +92,7 @@
                     </a>
                     </figcaption>
                 </figure>
-            </div>
             </section>
-
-
             <section class="page-section" id="contact">
                 <h2>Contact Me</h2>
             </section>
@@ -115,11 +112,4 @@
             </section>
         </main>
     </body>
-</html>
-
-
-
-
-
-
 </html>
