--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1><a href="index.html">My Portfolio</a></h1>  
+            <h1><a href="index.html">Varney V.</a></h1>  
         <nav> 
             <ul class="topNav">
                 <li><a href="about me">About Me</a></li>
@@ -60,7 +60,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig1">
-                    <a href="#"><img src="./assets/images/led-wall.png" alt="led-wall" width="500" height="253"/>
+                    <a href="https://afrique18.github.io/refactor-horiseon/"><img src="./assets/images/led-wall.png" alt="led-wall" width="500" height="253"/>
                     <figcaption>
                         <h3>Led Wall</h3>
                         <p>Node/IoT</p>
@@ -68,7 +68,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig2">
-                    <a href="#"><img src="./assets/images/calculator.jpeg" alt="calculator" width= "500" height="252"/>
+                    <a href="https://afrique18.github.io/refactor-horiseon/"><img src="./assets/images/calculator.jpeg" alt="calculator" width= "500" height="252"/>
                     <figcaption>
                         <h3>Calculator</h3>
                         <p>React/JavaScript/CSS</p>
@@ -76,7 +76,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig3">
-                    <a href="#"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width="500" height="253"/>
+                    <a href="https://afrique18.github.io/refactor-horiseon/"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width="500" height="253"/>
                     <figcaption>
                         <h3>Pastel Puzzels</h3>
                         <p> MERN Stack</p>
@@ -84,7 +84,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig4">
-                    <a href="#">
+                    <a href="https://afrique18.github.io/refactor-horiseon/">
                         <img src="./assets/images/run-buddy.png" alt="run-buddy" width= "500" height="253"/>
                     <figcaption>
                         <h3>Run Buddy</h3>
