--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
             <section id="portfolio">
                 <figure class="fig0">
-                    <a href="#">
+                    <a href="https://afrique18.github.io/refactor-horiseon/">
                         <img src="./assets/images/surf.webp" alt="surf" 
                         width= "500"
                         height="563"/>
