Add Activity Roulette

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </section>
             <section id="portfolio">
                 <figure class="fig0">
-                    <a href="https://afrique18.github.io/refactor-horiseon/">
-                        <img src="./assets/images/surf.webp" alt="surf" 
+                    <a href="https://sarroyo551.github.io/Activity-Roulette/">
+                        <img src="./assets/images/AR_project.png" alt="Activity Roulette" 
                         width= "500"
                         height="563"/>
                     <figcaption>
