Added Project 2 link and image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </figcaption>
                 </figure>
                 <figure class="fig3">
-                    <a href="https://afrique18.github.io/refactor-horiseon/"><img src="./assets/images/p-puzzle.png" alt="pastel-puzzels" width="500" height="253"/>
+                    <a href="https://workout-plus-c7901a67a230.herokuapp.com/"><img src="./assets/images/WT.png" alt="pastel-puzzels" width="500" height="253"/>
                     <figcaption>
                         <h3>Pastel Puzzels</h3>
                         <p> MERN Stack</p>
